# tic-tac-toe

./: .gitignore  README.md  hie.yaml  tic-tac-toe.cabal
app/: Main.hs
src/: Constants.hs  Game.hs  Logic.hs
src/Console/: Logic.hs  Render.hs  TicTacToe.hs
src/Ui/: Constants.hs  Logic.hs  Render.hs  TicTacToe.hs
test/: Spec.hs
